# goit-ds-hw-03

./: .gitignore  README.md
cats_cli/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
quotes_scraping/: main.py  pyproject.toml
