[tool.poetry]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = ["Maksym Sydorenko <maksym.sy96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pymongo = "^4.10.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
